--- a/assets/css/light-override.css
+++ b/assets/css/light-override.css
@@ -187,3 +187,34 @@ body > nav.navbar.has-background-black.is-fixed-bottom .navbar-brand::after {
   content: none !important;
   display: none !important;
 }
+
+/* ===============================
+   Bottom Navbar: Linie kommt von innerem DIV
+   =============================== */
+
+/* Direktes Kind-DIV der Navbar */
+body > nav.navbar.has-background-black.is-fixed-bottom > div {
+  border-top: 0 !important;
+  box-shadow: none !important;
+  background-image: none !important;
+}
+
+/* Typische Bulma-Innereien, auf denen Trennlinien sitzen */
+body > nav.navbar.has-background-black.is-fixed-bottom .navbar-brand,
+body > nav.navbar.has-background-black.is-fixed-bottom .navbar-menu,
+body > nav.navbar.has-background-black.is-fixed-bottom .navbar-start,
+body > nav.navbar.has-background-black.is-fixed-bottom .navbar-end {
+  border-top: 0 !important;
+  box-shadow: none !important;
+  background-image: none !important;
+}
+
+/* Falls es als Pseudo-Element gezeichnet wird */
+body > nav.navbar.has-background-black.is-fixed-bottom > div::before,
+body > nav.navbar.has-background-black.is-fixed-bottom > div::after,
+body > nav.navbar.has-background-black.is-fixed-bottom .navbar-menu::before,
+body > nav.navbar.has-background-black.is-fixed-bottom .navbar-menu::after {
+  content: none !important;
+  display: none !important;
+}
+
