--- a/assets/css/light-override.css
+++ b/assets/css/light-override.css
@@ -397,41 +397,11 @@ img {
 }
 
 /* =========================================================
-   LIGHT NAVBAR (für weißes Site-Design)
-   Ziel: Keine schwarzen Menüs, keine unsichtbaren Links
-   Betroffen: nav.navbar.is-transparent.is-absolute
+   MOBILE (<= 768px)
    ========================================================= */
-
-/* 1) Navbar-Grundfläche: nicht mehr transparent */
-body > nav.navbar.is-transparent.is-absolute {
-  background-color: #ffffff !important;
-  color: #111111 !important;
-  box-shadow: 0 1px 0 #e6e6e6 !important; /* dezente Trennung */
-}
-
-/* 2) Alle Items/Links in der Navbar: dunkel, gut lesbar */
-body > nav.navbar.is-transparent.is-absolute .navbar-item,
-body > nav.navbar.is-transparent.is-absolute .navbar-link,
-body > nav.navbar.is-transparent.is-absolute a {
-  color: #111111 !important;
-}
-
-/* 3) Hover/Active: dezente Fläche statt Dark-Theme */
-body > nav.navbar.is-transparent.is-absolute .navbar-item:hover,
-body > nav.navbar.is-transparent.is-absolute .navbar-link:hover,
-body > nav.navbar.is-transparent.is-absolute .navbar-item.is-active,
-body > nav.navbar.is-transparent.is-absolute .navbar-link.is-active {
-  background-color: #f2f2f2 !important;
-  color: #111111 !important;
-}
-
-/* 4) Mobile Burger sichtbar */
-body > nav.navbar.is-transparent.is-absolute .navbar-burger span {
-  background-color: #111111 !important;
-}
-
-/* 5) Mobile Menü (aufklappbar): weiß statt schwarz */
 @media screen and (max-width: 768px) {
+
+  /* Mobile-Menü: immer weiß, nie schwarz */
   body > nav.navbar.is-transparent.is-absolute .navbar-menu,
   body > nav.navbar.is-transparent.is-absolute .navbar-menu.is-active,
   body > nav.navbar.is-transparent.is-absolute .navbar-dropdown {
@@ -440,9 +410,34 @@ body > nav.navbar.is-transparent.is-absolute .navbar-burger span {
     border: 0 !important;
   }
 
-  body > nav.navbar.is-transparent.is-absolute .navbar-item,
-  body > nav.navbar.is-transparent.is-absolute .navbar-link {
+  /* Mobile-Menü-Links */
+  body > nav.navbar.is-transparent.is-absolute .navbar-menu a,
+  body > nav.navbar.is-transparent.is-absolute .navbar-menu .navbar-item {
     color: #111111 !important;
     background-color: transparent !important;
+  }
+
+  /* Mobile Hover / Active */
+  body > nav.navbar.is-transparent.is-absolute .navbar-menu .navbar-item:hover,
+  body > nav.navbar.is-transparent.is-absolute .navbar-menu .navbar-item.is-active {
+    background-color: #f2f2f2 !important;
+    color: #111111 !important;
+  }
+
+  /* Schwarze Linien / Balken sicher entfernen */
+  body > nav.navbar.is-transparent.is-absolute,
+  body > nav.navbar.is-transparent.is-absolute * {
+    border-top: 0 !important;
+    border-bottom: 0 !important;
+    box-shadow: none !important;
+    background-image: none !important;
+  }
+
+  body > nav.navbar.is-transparent.is-absolute::before,
+  body > nav.navbar.is-transparent.is-absolute::after,
+  body > nav.navbar.is-transparent.is-absolute *::before,
+  body > nav.navbar.is-transparent.is-absolute *::after {
+    content: none !important;
+    display: none !important;
   }
 }
